--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #222;
   color: #fff;
+  height: 100dvh;
   margin: 0;
   padding: 0;
 }
