--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   gap: 20px;
 }
 
