--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+:root {
+  height: 100dvh;
+}
+
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #222;
   color: #fff;
   height: 100dvh;
@@ -15,6 +19,10 @@ button {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+}
+input {
+  padding: 8px;
+  font-size: 1em;
 }
 
 .main-container {
