--- a/dice/styles.css
+++ b/dice/styles.css
@@ -3,10 +3,12 @@
 }
 
 body {
+  position: fixed;
   font-family: "Roboto", sans-serif;
   background-color: #222;
   color: #fff;
   height: 100dvh;
+  width: 100dvw;
   margin: 0;
   padding: 0;
   display: flex;
@@ -31,6 +33,13 @@ header {
 }
 
 .main-container {
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+}
+.scroll-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
